2007-09-06  Glenn Morris  <rgm@gnu.org>

	* gtkutil.c (menu_grab_callback) <cnt>:
	* xselect.c (x_reply_selection_request) <cnt>: Move static
	variable to file scope.

2007-09-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xdisp.c (redisplay_internal): Make sure Elisp code always sees
	consistent values of selected_frame and selected_window.

2007-09-04  Jason Rumney  <jasonr@gnu.org>

	* w32console.c (initialize_w32_display): Zero unused hooks.

2007-09-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.c (Vsuspend_tty_functions, Vresume_tty_functions)
	(syms_of_term, Fsuspend_tty, Fresume_tty): Undo previous change.

2007-09-04  Jason Rumney  <jasonr@gnu.org>

	* term.c (init_tty) [WINDOWSNT]: Add hooks that are not accessible
	in w32console.c.  Set up input.  Remove XXX comments that have been
	confirmed as correct.

	* s/ms-w32.h (MULTI_KBOARD): Define.

	* w32console.c (one_and_only_w32cons): Remove.
	(initialize_w32_display): Take terminal argument.

	* term.c (init_tty) [WINDOWSNT]: Pass terminal to
	initialize_w32_display.
	(init_tty) [MULTI_KBOARD]: Include this code on WINDOWSNT too.

	* termhooks.h (enum event_kind) <HORIZ_WHEEL_EVENT>: New event.

	* keyboard.c (discard_mouse_events): Discard it.
	(make_lispy_event): Translate it to a lisp event.
	(lispy_wheel_names): Add wheel-left and right events.
	(syms_of_keyboard): Enlarge wheel_syms.

	* w32fns.c (w32_wnd_proc) <WM_DROPFILES>: Merge with WM_MOUSEWHEEL.
	<WM_MOUSEHWHEEL>: Pass new system message to lisp.

	* w32term.h (WM_MOUSEHWHEEL): Define if system headers don't.

	* w32term.c (construct_mouse_wheel): Make HORIZ_WHEEL_EVENT
	from WM_MOUSEHWHEEL.
	(w32_read_socket) <WM_MOUSEHWHEEL>: Treat as WM_MOUSEWHEEL.

	* w32fns.c (x_create_tip_frame) [MULTI_KBOARD]: Get keyboard from
	terminal.

	* w32term.c (w32_create_terminal) [MULTI_KBOARD]: Create a new
	keyboard for the terminal.

2007-09-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.c (Vsuspend_tty_hook): Rename from Vsuspend_tty_functions.